--- a/index.html
+++ b/index.html
@@ -363,16 +363,12 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>I am a sport enthusiast... <br>
-          I rock climb and boulder<br>
-          I play badminton, to a decent level <br>
-          I play soccer, my friends dragged me to play co-ed cup <br>
-          And I love all the sports<br>
-          I go to the gym, almost everyday<br>
-          Fun facts: I deadlift 160lbs, squat 130lbs and hip thrust 185lbs <br><br>
+          I rock climb and boulder; I play badminton and soccer<br>
+          I love all the sports<br>
+          And I go to the gym, almost everyday<br><br>
 
           I love music as well... <br>
-          I played piano since 5, sadly I gave it up when I was 7 <br>
-          I learnt guitar, from Youtube, but as least I can play some songs <br>
+          I played piano and I learnt guitar by myself.<br>
           I also enjoy dancing, kinda shy to dance, but hey I performed twice! </p>
       </div>
     </section>
