--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
-            <h3 class="mb-0">New Grad Developersss</h3>
+            <h3 class="mb-0">New Grad Developer</h3>
             <div class="subheading mb-3">Rogers Communications</div>
             <ul>
               <li>Experience in agile methodology</li>
