--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
           <b>KNOWLEDGE</b>: Agile, API & Web Service, Version Control System, Data Algorithms, Database & Cache. 
         </p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/christina-deng-6b518bab/">
+          <a href="https://www.linkedin.com/in/christina-deng-6b518bab/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/ChristinaDeng1015">
+          <a href="https://github.com/christinadeng-1015" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://www.instagram.com/christinadeng1015/">
+          <a href="https://www.instagram.com/christinadeng1015/" target="_blank">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://www.facebook.com/christina.deng.1">
+          <a href="https://www.facebook.com/christina.deng.1" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -96,33 +96,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
-            <h3 class="mb-0">New Grad Developer</h3>
+            <h3 class="mb-0">Application Developer</h3>
             <div class="subheading mb-3">Rogers Communications</div>
             <ul>
-              <li>Experience in agile methodology</li>
-              <li>Outstanding analytical and methodical troubleshooting skills</li>
-              <li>Ability to translate technical background into business solution</li>
-              <li>Knowledge of traditional database technology</li>
+              <li>Contribute and aware of all sorts of agile ceremonies (user story, sprint planning, and retrospective)</li>
+              <li>Build assembled components in Angular for Rogers, Fido and Chatr browse pages</li>
+              <li>Create UI extensions and migrate scripts to Contentful DEV and QA environment</li> 
+              <li>Rewrite and Improve the existing code for browse application</li>
+              <li>Define metrics and conduct end-to-end testing</li>
+              <li>Implement soft limit count to text field in TypeScript to allow business users exceed limit while
+                triggering alerts, which increase business efficiency by 7%</li>
+              <li>Develop article template and full width video component for Rogers Design System, and utilize them across multiple sites</li>
+                
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2019 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
-          <div class="resume-content">
-            <h3 class="mb-0">Sales Associate</h3>
-            <div class="subheading mb-3">UNIQLO Canada</div>
-            <ul>
-                <li>Strong communication and sales skills</li>
-                <li>Deliver a superior and consistent customer experience</li>
-                <li>Work in a fast-paced environment that requires high degree multi-tasking</li>
-                <li>Outstanding teamwork and troubleshooting</li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">May 2019 - July 2019</span>
+            <span class="text-primary">February 2019 - Present</span>
           </div>
         </div>
 
@@ -131,10 +120,10 @@
             <h3 class="mb-0">Web Designer</h3>
             <div class="subheading mb-3">SFUCAC</div>
             <ul>
-                <li>Create, implement new look and style for notable web presence</li>
-                <li>Market social networks and design graphics for a variety of businesses</li>
-                <li>Ability to multi-task and meet deadlines</li>
-                <li>Outstanding teamwork and troubleshooting</li>
+                <li>Created responsive site from provided design concepts by implementing HTML, CSS, JavaScript, Bootstrap and jQuery frameworks</li>
+                <li>Designed digital contents using Photoshop and Illustrator</li>
+                <li>Provided web services such as domain registration, web hosting, search engine optimization</li>
+                <li>Ability to multi-task, prioritizing projects without supervision and meeting deadlines regardless of workloads</li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
@@ -147,9 +136,13 @@
             <h3 class="mb-0">Data Analyst Intern</h3>
             <div class="subheading mb-3">China Mobile</div>
             <ul>
-                <li>Design and build statistical analysis models on large data sets</li>
-                <li>Utilize statistical software to track and analyze data</li>
-                <li>Interpret data to identify key metrics and draw conclusions</li>
+                <li>Created pivot tables in Excel to extract significance from large data sets and matched
+                  information with VLOOKUP</li>
+                <li>Transformed corresponding data to make comparison models and create dashboards</li>
+                <li>Utilized R skills to interpret and forecast customer behaviors</li>
+                <li>Illustrated high quality of work and attention to details by achieving 95% of accuracy in verifying
+                  various data sources and presenting company business reports</li>
+                <li>Ability to multi-task, prioritize without supervision and meet deadlines regardless of workloads</li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
@@ -162,9 +155,9 @@
             <h3 class="mb-0">Summer Marketing Specialist</h3>
             <div class="subheading mb-3">Bluekey Education</div>
             <ul>
-                <li>Collaborate with manager to meet campaign objectives</li>
-                <li>Communicate with customers conduct surveys and evaluate satisfaction</li>
-                <li>Evaluate marketing data and produce sales reports</li>
+                <li>Collaborated with manager to meet campaign objectives</li>
+                <li>Communicated with customers conduct surveys and evaluate satisfaction</li>
+                <li>Evaluated marketing data and produce sales reports</li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
@@ -177,8 +170,8 @@
             <h3 class="mb-0">Finance Intern</h3>
             <div class="subheading mb-3">iFortune Homes Inc.</div>
             <ul>
-                <li>Analyze financial statements to determine business opportunities</li>
-                <li>Streamline reporting to maximize efficiency while maintaining compliance</li>
+                <li>Analyzed financial statements to determine business opportunities</li>
+                <li>Streamlined reporting to maximize efficiency while maintaining compliance</li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
@@ -358,20 +351,6 @@
     </section>
 
     <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>I am a sport enthusiast... <br>
-          I rock climb and boulder; I play badminton and soccer<br>
-          I love all the sports<br>
-          And I go to the gym, almost everyday<br><br>
-
-          I love music as well... <br>
-          I played piano and I learnt guitar by myself.<br>
-          I also enjoy dancing, kinda shy to dance, but hey I performed twice! </p>
-      </div>
-    </section>
 
     <hr class="m-0">
 
